argocd/ghost/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cms-contrasting-org
  labels:
    app: cms-contrasting-org
    org.rm3l.services.service_name: cms-contrasting-org
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cms-contrasting-org
  serviceName: cms-contrasting-org
  template:
    metadata:
      labels:
        app: cms-contrasting-org
    spec:
      volumes:
      - name: cms-contrasting-org-ghost-root
        persistentVolumeClaim:
          claimName: cms-contrasting-org
          readOnly: false

      containers:
      - name: cms-contrasting-org
        image: ghost:3.19.2-alpine
        ports:
        - name: liveness-port
          containerPort: 2368
        startupProbe:
          tcpSocket:
            port: liveness-port
          periodSeconds: 10
          failureThreshold: 30
        livenessProbe:
          tcpSocket:
            port: liveness-port
          initialDelaySeconds: 30
          periodSeconds: 90
          timeoutSeconds: 60
        readinessProbe:
          tcpSocket:
            port: liveness-port
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
          - name: cms-contrasting-org-ghost-root
            mountPath: /var/lib/ghost/content
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: cms-contrasting-org
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  rules:
  - host: blog.contrasting.org
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
  tls:
  - hosts:
    - blog.contrasting.org
    secretName: contrasting-org
